[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Interactive/MovingPlatform.gd" type="Script" id=1]
[ext_resource path="res://addons/kenney_prototypes/assets/colors/green/scenes/prototype_green_02.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sfx/Windmill [loop].wav" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 0.15, 2 )

[node name="MovingPlatform" type="StaticBody"]
collision_layer = 6
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Model" parent="." instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 0.15, 0, 0, 0, 2, -2, -0.15, -2 )

[node name="StartPos" type="Position3D" parent="."]

[node name="EndPos" type="Position3D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="SFX" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.401685, 0 )
stream = ExtResource( 3 )
unit_size = 3.5
max_db = -1.5
bus = "SFX"

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
